--- a/css/Style.css
+++ b/css/Style.css
@@ -8,7 +8,9 @@
     margin-left: 1%;
     margin-right: 1%;
 }
-
+#header {
+    margin-bottom: 1%;
+}
 #header  a{
     border: 0px;
     background-color: rgb(217, 209, 209);
