--- a/css/Style.css
+++ b/css/Style.css
@@ -111,6 +111,7 @@ span.glyphicon-zoom-in {
     border: 2px solid #d9e5e5;
     border-radius: 5px;
     padding-bottom: 1%;
+    margin-top: 5%;
 }
 
 
