--- a/css/Style.css
+++ b/css/Style.css
@@ -104,14 +104,14 @@ span.glyphicon-zoom-in {
 #TopCompras {
     border: 2px solid #d9e5e5;
     border-radius: 5px;
-    padding-bottom: 1%;
+    padding-bottom: 1%;   
+    margin-bottom: 5%;
 }
 
 #ComprasRecentes {
     border: 2px solid #d9e5e5;
     border-radius: 5px;
     padding-bottom: 1%;
-    margin-top: 5%;
 }
 
 
