Revert "minha versao"
This reverts commit 682d904a054893b1423661f6df4ebf858e1a2b1b.

--- a/css/Style.css
+++ b/css/Style.css
@@ -104,16 +104,25 @@ span.glyphicon-zoom-in {
 #TopCompras {
     border: 2px solid #d9e5e5;
     border-radius: 5px;
+    padding-bottom: 1%;   
+    margin-bottom: 5%;
+}
+
+#ComprasRecentes {
+    border: 2px solid #d9e5e5;
+    border-radius: 5px;
     padding-bottom: 1%;
 }
 
+
 #Tab{
-    margin-top: 5%; 
+    margin-top: 10%; 
     margin-left: 1%;
     margin-right: 1%;
     background-color: #d9e5e5;
     border-radius: 5px;
     padding: 1%;
 }
+
 
 
