--- a/css/Style.css
+++ b/css/Style.css
@@ -131,9 +131,10 @@ span.glyphicon-zoom-in {
 
 #center_column{
 	margin-left: 22%;
-	width: 40%;
+	width: 50%;
 	margin-right: 270 px;
 	display: block;
+	margin-top: 50px;
 }
 
 #left_column{
