--- a/css/Style.css
+++ b/css/Style.css
@@ -171,7 +171,7 @@ span.glyphicon-zoom-in {
 }
 
 #center_column h3 {
-	margin-top: 20px;
+	padding-top: 20px;
 }
 
 #center_column p {
@@ -179,7 +179,7 @@ span.glyphicon-zoom-in {
 }
 
 #price {
-	padding-left: 5em;
+	padding-left: 2em;
 }
 
 
