--- a/css/Style.css
+++ b/css/Style.css
@@ -182,10 +182,11 @@ span.glyphicon-zoom-in {
 	padding-left: 2em;
 }
 
-#separation-line {
+.separation-line {
 	width: 100%;
 	border-top: 1px solid #ccc;
 	height: 1px;
+	margin-top: 10px;
 }
 
 #comentarios {
@@ -199,7 +200,7 @@ span.glyphicon-zoom-in {
 }
 
 .c_rate {
-	margin-top: 10px;
+	margin-top: 2px;
 }
 
 .c_text{
