--- a/css/Style.css
+++ b/css/Style.css
@@ -199,15 +199,15 @@ span.glyphicon-zoom-in {
 #also_bought_container {
 	display: block;
 	padding: 10px;
-	background-color: #ffc;
+	background-color: #ffd;
 	border: 0;
+	text-align: center;
 }
 
 #also_bought_container td {
-	width: 180px;
-	margin-left: 2%;
-	margin-right: 2%;
-	background-color: #ffe;
+	width: 29%;
+	margin-left: 4%;
+	margin-right: 4%;
 }
 
 .a_b_price {
@@ -217,6 +217,7 @@ span.glyphicon-zoom-in {
 
 .a_b_name {
 	font-size: 140%;
+	float: right;
 }
 
 #comments {
