--- a/css/Style.css
+++ b/css/Style.css
@@ -201,6 +201,7 @@ span.glyphicon-zoom-in {
 	padding: 10px;
 	background-color: #ffe;
 	border: 0;
+	text-align: center;
 }
 
 #also_bought_container td {
