--- a/css/Style.css
+++ b/css/Style.css
@@ -238,6 +238,15 @@ span.glyphicon-zoom-in {
 	display: inline-block;
 	clear: both;
 	white-space: nowrap;
+	line-height: 14px;
+}
+
+.second_tier_text{
+	line-height: 15px;
+	padding-top: 20px;
+	clear: both;
+	display: inline-block;
+	white-space: nowrap;
 }
 
 #nav_right_h_menu {
