--- a/css/Style.css
+++ b/css/Style.css
@@ -263,7 +263,12 @@ span.glyphicon-zoom-in {
 }
 
 #exampleInputEmail1 {
-	max-width: 180px;
+	width: 250px;
+	display: inline-block;
+}
+
+#search_method {
+	height: 40px;
 }
 
 body {
