--- a/css/Style.css
+++ b/css/Style.css
@@ -256,6 +256,7 @@ span.glyphicon-zoom-in {
 	float: right;
 	padding-right: 15px;
 	padding-left: 15px;
+	padding-top: 30px;
 }
 
 #nav_right_h_menu a {
@@ -268,7 +269,7 @@ span.glyphicon-zoom-in {
 }
 
 #search_method {
-	height: 40px;
+	height: 30px;
 }
 
 body {
