--- a/css/Style.css
+++ b/css/Style.css
@@ -7,11 +7,16 @@
 body{
     margin-left: 1%;
      margin-right: 1%;
+    	font-family: Arial, sans-serif;
+	color: #111;
+	font-size: 13px;
 }
 
 #pagina{
-    margin-left: 1%;
-    margin-right: 1%;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding-right: 15px;
+  padding-left: 15px;
 }
 #header {
     margin-bottom: 1%;
@@ -193,10 +198,4 @@ span.glyphicon-zoom-in {
 
 #search_method {
 	height: 30px;
-}
-
-body {
-	font-family: Arial, sans-serif;
-	color: #111;
-	font-size: 13px;
 }
