--- a/css/Style.css
+++ b/css/Style.css
@@ -6,6 +6,8 @@
 
 input.star{
   display: none;
+     max-width:100% !important;
+    height:auto;
 }
 
 label.star {
@@ -14,18 +16,24 @@ label.star {
   font-size: 36px;
   color: #444;
   transition: all .2s;
+     max-width:100% !important;
+    height:auto;
 }
 
 input.star:checked ~ label.star:before {
   content:'\f005';
   color: #FD4;
   transition: all .25s;
+     max-width:100% !important;
+    height:auto;
 }
 
 
 input.star-5:checked ~ label.star:before {
   color:#FE7;
   text-shadow: 0 0 20px #952;
+     max-width:100% !important;
+    height:auto;
 }
 
 input.star-1:checked ~ label.star:before {
